--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     url: jdbc:h2:tcp://localhost/~/jpashop;
     username : sa
     password:
-    diver-class-name: org.h2.Driver
+    driver-class-name: org.h2.Driver
 
 
   jpa:
@@ -11,11 +11,11 @@ spring:
       ddl-auto: create
     properties:
       hibernate:
-#        show_sql: true
         format_sql: true
+        show_sql: true
 
 
 logging:
   level:
     org.hibernate.sql: debug
-    org.hibernate.orm.jdbc.bind: trace
+#    org.hibernate.orm.jdbc.bind: trace
