--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,18 +1,18 @@
 spring:
-#  datasource:
-#    url: jdbc:h2:mem:test
-#    username : sa
-#    password:
-#    diver-class-name: org.h2.Driver
-#
-#
-#  jpa:
-#    hibernate:
-#      ddl-auto: create
-#    properties:
-#      hibernate:
-##        show_sql: true
-#        format_sql: true
+  datasource:
+    url: jdbc:h2:file:/Users/raccon/개인공부/DB/jpashop
+    username : sa
+    password:
+    driver-class-name: org.h2.Driver
+
+
+  jpa:
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
 
 
 logging:
